Fixed alignment of icon inside input element

--- a/src/components/molecules/search-box/styles.scss
+++ b/src/components/molecules/search-box/styles.scss
@@ -6,6 +6,7 @@
 
 .search-icon {
   position: absolute;
+  top: 0;
   left: 0;
   margin: 1.2rem 0.8rem;
   font-size: 1.8rem;
